# stm32-projects

./: .gitignore  .gitmodules  LICENSE  README.md  THIRD-PARTY-NOTICES.md  TODO.md  UART.md
applications/: README.md
applications/MQTTReader/: settings.gradle.kts
applications/SEN55Reader/: build.gradle.kts  settings.gradle.kts
applications/sen55-reader/: README.md  go.mod  main.go
applications/sen55-serial-reader/: CMakeLists.txt  README.md  build.ninja  db.cpp  db.hpp  example_usage.cpp  main.cpp  serial.cpp  serial.hpp
applications/sensors-service/: .gitignore  MIGRATIONS.md  Makefile  README.md  TODO.md  compose.yaml  config.json  go.mod  go.sum
b-u585i-iot02a/: README.md
b-u585i-iot02a/001_mxchip/: .cproject  .mxproject  .project  001_mxchip.ioc  001_mxchip.launch
b-u585i-iot02a/001_mxchip_start_over/: .cproject  .mxproject  .project  001_mxchip_start_over.ioc  001_mxchip_start_over.launch
b-u585i-iot02a/002_mxchip/: .cproject  .mxproject  .project  002_mxchip.ioc  002_mxchip.launch  README.md
freertos/: .gitignore
modules/: README.md
nucleo-f072rb/: README.md
nucleo-f446re/: README.md
nucleo-f767zi/: README.md
nucleo-g431kb/: README.md
nucleo-g474re/: README.md
nucleo-h533re/: README.md
nucleo-l432kc/: README.md
nucleo-l476rg/: README.md
nucleo-l552ze-q/: README.md
stm32f3disc/: README.md
stm32f429i-disc1/: README.md
stm32f4disc/: README.md  TODO.md
stm32mp157f-dk2/: README.md
weact-stm32f4-64pin/: README.md
weact-stm32h5-64pin/: README.md
weact-stm32h7xx/: README.md
weact-stm32wb/: README.md
(+1194 files in other folders)
